# inferencegateway

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: DEPLOY.md
include/ig/: backend_pool.h  circuit.hpp  histogram.h  http.h  metrics.h  router.h  scheduler.h
proto/: inference.proto
src/: fakebackend.cpp  loadgen.cpp  main.cpp
tests/: test_affinity.cpp  test_router.cpp  test_scheduler.cpp  test_stream.cpp  test_v4_circuit.cpp
web/: index.html  monitor.js  style.css
